libs/@local/hashql/ast/tests/ui/lowering/type-extractor/definition/non-contractive-type.jsonc
//@ run: fail
//@ description: Non-contractive types (pure self references) should be rejected
[
  "type",
  "A",
  "A",
  //~^ ERROR Type `A` cannot reference itself directly
  "_"
]
